--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <table>
             <tr>
                 <td><label for="noteAreaBox">Task:</label></td>
-                <td><textarea name="noteAreaBox" id="noteAreaBox" cols="30" rows="10"></textarea></td>
+                <td><textarea name="noteAreaBox" id="noteAreaBox" rows="10"></textarea></td>
             </tr>
             <tr>
                 <td><label for="dateBox">Date:</label></td>
